modified webpack, install file-loader, add header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div class="h-content">
+            <div class="nav-bar">
+                <p class="logo">
+                    <a href="#">Retro</a>
+                </p>
+                <div class="links">
+                    <ul>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li>4</li>
+                        <li>5</li>
+                        <li>6</li>
+                        <li>7</li>
+                    </ul>  
+                </div>
+            </div>
+            <div class="title-block">
+                <p class="title">Taste the Creativity</p>
+                <p>We make awesome grap</p>
+                <p><span>Get Started</span></p>
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     <script type="text/javascript" src='./res/main.js'></script>
 </body>
 </html>
