added some style for header

--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./res/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <header>
         <div class="h-content">
             <div class="nav-bar">
-                <p class="logo">
+                <p class="logo btb">
                     <a href="#">Retro</a>
                 </p>
                 <div class="links">
                     <ul>
+                        <li>Home</li>
+                        <li>Services</li>
+                        <li>Portfolio</li>
+                        <li>About</li>
+                        <li>Contact</li>
                         <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
-                        <li>6</li>
-                        <li>7</li>
+                        <li><span class="btn login">login</span></li>
                     </ul>  
                 </div>
             </div>
             <div class="title-block">
-                <p class="title">Taste the Creativity</p>
-                <p>We make awesome grap</p>
-                <p><span>Get Started</span></p>
+                <p class="title btb">Taste the Creativity</p>
+                <p>We make awesome graphic and web design</p>
+                <p><span class="btn">Get Started</span></p>
             </div>
         </div>
     </header>
