--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./res/style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.1.0/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
@@ -22,7 +23,7 @@
                         <li>Portfolio</li>
                         <li>About</li>
                         <li>Contact</li>
-                        <li>1</li>
+                        <li><i class="far fa-search"></i></li>
                         <li><span class="btn login">login</span></li>
                     </ul>  
                 </div>
