added block clients

--- a/index.html
+++ b/index.html
@@ -83,7 +83,19 @@
             </div>
         </div>
         <div class="clients" >
-            
+            <div class="content">
+                <div class="title">
+                    CLIENTS
+                </div>
+                <p>SOMEBODY ACTUALLY PAY US FOR THESE STUFF</p>
+                <div class="clients-img">
+                    <div class="p"><img src="/img/cl-1.png" alt=""></div>
+                    <div class="p"><img src="/img/cl-2.png" alt=""></div>
+                    <div class="p"><img src="/img/cl-3.png" alt=""></div>
+                    <div class="p"><img src="/img/cl-4.png" alt=""></div>
+                    <div class="p"><img src="/img/cl-5.png" alt=""></div>
+                </div>
+            </div>
         </div>
         <div class="work">
             
