added block work

--- a/index.html
+++ b/index.html
@@ -89,16 +89,33 @@
                 </div>
                 <p>SOMEBODY ACTUALLY PAY US FOR THESE STUFF</p>
                 <div class="clients-img">
-                    <div class="p"><img src="/img/cl-1.png" alt=""></div>
-                    <div class="p"><img src="/img/cl-2.png" alt=""></div>
-                    <div class="p"><img src="/img/cl-3.png" alt=""></div>
-                    <div class="p"><img src="/img/cl-4.png" alt=""></div>
-                    <div class="p"><img src="/img/cl-5.png" alt=""></div>
+                    <div><img src="./img/cl-1.png" alt=""></div>
+                    <div><img src="./img/cl-2.png" alt=""></div>
+                    <div><img src="./img/cl-3.png" alt=""></div>
+                    <div><img src="./img/cl-4.png" alt=""></div>
+                    <div><img src="./img/cl-5.png" alt=""></div>
                 </div>
             </div>
         </div>
         <div class="work">
-            
+            <div class="content">
+                <div class="title">
+                    RECENT WORK
+                </div>
+                <p>
+                    WHEN WE ARE BORED WE MAKE SOME OF THESE
+                </p>
+                <div class="work-img">
+                    <div><img src="./img/cl-6.jpg" alt=""></div>
+                    <div><img src="./img/cl-7.jpg" alt=""></div>
+                    <div><img src="./img/cl-8.jpg" alt=""></div>
+                    <div><img src="./img/cl-9.jpg" alt=""></div>
+                    <div><img src="./img/cl-10.jpg" alt=""></div>
+                    <div><img src="./img/cl-11.jpg" alt=""></div>
+                    <div><img src="./img/cl-12.jpg" alt=""></div>
+                    <div><img src="./img/cl-13.jpg" alt=""></div>
+                </div>
+            </div>
         </div>
         <div class="adversite ">
             
