added block blog

--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
                     WHEN WE ARE BORED WE MAKE SOME OF THESE
                 </p>
                 <div class="work-img">
-                    <div><img src="./img/cl-6.jpg" alt=""></div>
-                    <div><img src="./img/cl-7.jpg" alt=""></div>
-                    <div><img src="./img/cl-8.jpg" alt=""></div>
-                    <div><img src="./img/cl-9.jpg" alt=""></div>
-                    <div><img src="./img/cl-10.jpg" alt=""></div>
-                    <div><img src="./img/cl-11.jpg" alt=""></div>
-                    <div><img src="./img/cl-12.jpg" alt=""></div>
-                    <div><img src="./img/cl-13.jpg" alt=""></div>
+                    <div><img src="./img/wk-1.jpg" alt=""></div>
+                    <div><img src="./img/wk-2.jpg" alt=""></div>
+                    <div><img src="./img/wk-3.jpg" alt=""></div>
+                    <div><img src="./img/wk-4.jpg" alt=""></div>
+                    <div><img src="./img/wk-5.jpg" alt=""></div>
+                    <div><img src="./img/wk-6.jpg" alt=""></div>
+                    <div><img src="./img/wk-7.jpg" alt=""></div>
+                    <div><img src="./img/wk-8.jpg" alt=""></div>
                 </div>
             </div>
         </div>
@@ -129,7 +129,48 @@
             </div>
         </div>
         <div class="blog">
-            
+            <div class="title">
+                Read Our Blog
+            </div>
+            <p>
+                WHEN WE ARE BORED WE MAKE SOME OF THESE
+            </p>
+            <div class="blogs">
+                <article>
+                    <div class="bg-img">
+                        <img src="./img/bg-1.jpg" alt="">
+                    </div>
+                    <p class="date">
+                        January 17,2017
+                    </p>
+                    <div class="bg-title">
+                        Some Awesome Blog Title Here
+                    </div>
+                </article>
+                <article>
+                    <div class="bg-img">
+                        <img src="./img/bg-2.jpg" alt="">
+                    </div>
+                    <p class="date">
+                            January 17,2017
+                    </p>
+                    <div class="bg-title">
+                        Some Awesome Blog Title Here
+                    </div>
+                </article>
+                <article>
+                    <div class="bg-img">
+                        <img src="./img/bg-3.jpg" alt="">
+                    </div>
+                    <p class="date">
+                        January 17,2017
+                    </p>
+                    <div class="bg-title">
+                        Some Awesome Blog Title Here    
+                    </div>
+                </article>
+            </div>
+            <div><span class="btn">more stories</span></div>
         </div>
         <div class="newslatter">
             
