added block newslatter

--- a/index.html
+++ b/index.html
@@ -173,7 +173,15 @@
             <div><span class="btn">more stories</span></div>
         </div>
         <div class="newslatter">
-            
+            <div class="content">
+                <div class="sub">
+                    Subscribe to our Newsletter:
+                </div>
+                <div class="input">
+                    <input type="text" placeholder="Enter email Address">
+                </div>
+                <div><span class="btn">Subscribe</span></div>
+            </div>
         </div>
     </main>
     <footer>
