added block footer

--- a/index.html
+++ b/index.html
@@ -185,7 +185,68 @@
         </div>
     </main>
     <footer>
-
+        <div class="content">
+            <div class="simple-data">
+                <div class="footer-logo">
+                    <a class="btb" href="#">Retro</a>
+                </div>
+                <p class="info">
+                    Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
+                </p>
+                <p>
+                    Created by © 2017 <span class='clr'>ThemeXpert</span>
+                </p>
+            </div>
+            <div class="links">
+                <div class="footer-title">
+                    Links
+                </div>
+                <ul>
+                    <li>Home</li>
+                    <li>Our Services</li>
+                    <li>Portfolio</li>
+                    <li>Testimonials</li>
+                    <li>Support</li>
+                    <li>Teems and Conditions</li>
+                </ul>
+            </div>
+            <div class="about-us">
+                <div class="footer-title">
+                    About Us
+                </div>
+                <ul>
+                    <li>Sing In</li>
+                    <li>Register</li>
+                    <li>About Us</li>
+                    <li>Blog</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div class="contact-us">
+                <div class="footer-title">
+                    Contact Us
+                </div>
+                <p>
+                    Get in touch with us via mail phone.We are waiting for 
+                    your call or message
+                </p>
+                <div class='footer-mail btn'>Mail</div>
+                <div class="social">
+                    <div class="facebook">
+                        <i class="fab fa-facebook-f"></i>
+                    </div>
+                    <div class="twitter">
+                        <i class="fab fa-twitter"></i>
+                    </div>
+                    <div class="google">
+                        <i class="fab fa-google-plus-g"></i>
+                    </div>
+                    <div class='ball'>
+                        <i class="fas fa-basketball-ball"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
     <script type="text/javascript" src='./res/main.js'></script>
 </body>
