added adaptive and fix html

--- a/index.html
+++ b/index.html
@@ -18,75 +18,85 @@
                 </p>
                 <div class="links">
                     <ul>
-                        <li class="active-l">Home</li>
-                        <li>Services</li>
-                        <li>Portfolio</li>
-                        <li>About</li>
-                        <li>Contact</li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
                         <li><i class="far fa-search"></i></li>
-                        <li><span class="btn login">login</span></li>
+                        <li><a href="#"><span class="btn login">login</span></a></li>
                     </ul>  
+                </div>
+                <div class="mobile-links">
+                    <div class="burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="b-links">
+
+                    </div>
                 </div>
             </nav>
             <div class="title-block">
-                <p class="title btb">Taste the Creativity</p>
+                <h2 class="title btb">Taste the Creativity</h2>
                 <p>We make awesome graphic and web design</p>
                 <p><span class="btn">Get Started</span></p>
             </div>
         </div>
     </header>
     <main>
-        <div class="services">
+        <section class="services">
             <div class="content">
                 <article class="block">
                     <div class="icon">
                         <i class="fal fa-pencil-alt"></i>
                     </div>
-                    <div class="title">
+                    <h4 class="title">
                         idea
-                    </div>
-                    <div class="desc">
+                    </h4>
+                    <p class="desc">
                         Vivamus suscipit tortor eget felis porttitor 
                         volutpat. Vestibulum ac diam sit amet 
                         quam vehicula elementum sed sit amet dui. 
                         Pellentesque in ipsum id orci. 
-                    </div>
+                    </p>
                 </article>
                 <article class="block">
                     <div class="icon">
                         <i class="fal fa-plug"></i>
                     </div>
-                    <div class="title">
+                    <h4 class="title">
                         work
-                    </div>
-                    <div class="desc">
+                    </h4>
+                    <p class="desc">
                         Vivamus suscipit tortor eget felis porttitor 
                         volutpat. Vestibulum ac diam sit amet 
                         quam vehicula elementum sed sit amet dui. 
                         Pellentesque in ipsum id orci. 
-                    </div>
+                    </p>
                 </article>
                 <article class="block">
                     <div class="icon">
                         <i class="fal fa-truck-loading"></i>
                     </div>
-                    <div class="title">
+                    <h4 class="title">
                         deliver
-                    </div>
-                    <div class="desc">
+                    </h4>
+                    <p class="desc">
                         Vivamus suscipit tortor eget felis porttitor 
                         volutpat. Vestibulum ac diam sit amet 
                         quam vehicula elementum sed sit amet dui. 
                         Pellentesque in ipsum id orci. 
-                    </div>
+                    </p>
                 </article>
             </div>
-        </div>
-        <div class="clients" >
+        </section>
+        <section class="clients" >
             <div class="content">
-                <div class="title">
+                <h4 class="title">
                     CLIENTS
-                </div>
+                </h4>
                 <p>SOMEBODY ACTUALLY PAY US FOR THESE STUFF</p>
                 <div class="clients-img">
                     <div><img src="./img/cl-1.png" alt=""></div>
@@ -96,12 +106,12 @@
                     <div><img src="./img/cl-5.png" alt=""></div>
                 </div>
             </div>
-        </div>
-        <div class="work">
+        </section>
+        <section class="work">
             <div class="content">
-                <div class="title">
+                <h4 class="title">
                     RECENT WORK
-                </div>
+                </h4>
                 <p>
                     WHEN WE ARE BORED WE MAKE SOME OF THESE
                 </p>
@@ -116,73 +126,75 @@
                     <div><img src="./img/wk-8.jpg" alt=""></div>
                 </div>
             </div>
-        </div>
-        <div class="adversite">
+        </section>
+        <section class="adversite">
             <div class="content">
-                <div class="title">
+                <h2 class="title">
                     Start Your Project Now
-                </div>
+                </h2>
                 <p>
                     Leave your description and we start the engine.Don't worry,you can cancel anytime
                 </p>
-                <div><span class="btn">START PROJECT</span></div>
+                <div class="btn">START PROJECT</div>
             </div>
-        </div>
-        <div class="blog">
-            <div class="title">
+        </section>
+        <section class="blog">
+            <h2 class="title">
                 Read Our Blog
-            </div>
+            </h2>
             <p>
                 WHEN WE ARE BORED WE MAKE SOME OF THESE
             </p>
             <div class="blogs">
-                <article>
+                <div class="blog-article">
                     <div class="bg-img">
                         <img src="./img/bg-1.jpg" alt="">
                     </div>
                     <p class="date">
                         January 17,2017
                     </p>
-                    <div class="bg-title">
+                    <h5 class="bg-title">
                         Some Awesome Blog Title Here
-                    </div>
-                </article>
-                <article>
+                    </h5>
+                </div>
+                <div class="blog-article">
                     <div class="bg-img">
                         <img src="./img/bg-2.jpg" alt="">
                     </div>
                     <p class="date">
                             January 17,2017
                     </p>
-                    <div class="bg-title">
+                    <h5 class="bg-title">
                         Some Awesome Blog Title Here
-                    </div>
-                </article>
-                <article>
+                    </h5>
+                </div>
+                <div class="blog-article">
                     <div class="bg-img">
                         <img src="./img/bg-3.jpg" alt="">
                     </div>
                     <p class="date">
                         January 17,2017
                     </p>
-                    <div class="bg-title">
+                    <h5 class="bg-title">
                         Some Awesome Blog Title Here    
-                    </div>
-                </article>
+                    </h5>
+                </div>
             </div>
-            <div><span class="btn">more stories</span></div>
-        </div>
-        <div class="newslatter">
+            <div class="btn">more stories</div>
+        </section>
+        <section class="newslatter">
             <div class="content">
-                <div class="sub">
-                    Subscribe to our Newsletter:
-                </div>
-                <div class="input">
-                    <input type="text" placeholder="Enter email Address">
-                </div>
-                <div><span class="btn">Subscribe</span></div>
+                <form method="post">
+                    <label class="sub" for="mail">
+                        Subscribe to our Newsletter:
+                    </label>
+                    <div class="input">
+                        <input type="text" id="mail" placeholder="Enter email Address">
+                    </div>
+                    <div><button type="submit">Subscribe</button></div>
+                </form>            
             </div>
-        </div>
+        </section>
     </main>
     <footer>
         <div class="content">
@@ -202,12 +214,12 @@
                     Links
                 </div>
                 <ul>
-                    <li>Home</li>
-                    <li>Our Services</li>
-                    <li>Portfolio</li>
-                    <li>Testimonials</li>
-                    <li>Support</li>
-                    <li>Teems and Conditions</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Our Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Teems and Conditions</a></li>
                 </ul>
             </div>
             <div class="about-us">
@@ -215,11 +227,11 @@
                     About Us
                 </div>
                 <ul>
-                    <li>Sing In</li>
-                    <li>Register</li>
-                    <li>About Us</li>
-                    <li>Blog</li>
-                    <li>Contact Us</li>
+                    <li><a href="#">Sing In</a></li>
+                    <li><a href="#">Register</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
             <div class="contact-us">
@@ -233,16 +245,24 @@
                 <div class='footer-mail btn'>Mail</div>
                 <div class="social">
                     <div class="facebook">
-                        <i class="fab fa-facebook-f"></i>
+                        <a href="#">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
                     </div>
                     <div class="twitter">
-                        <i class="fab fa-twitter"></i>
+                        <a href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
                     </div>
                     <div class="google">
-                        <i class="fab fa-google-plus-g"></i>
+                        <a href="#">
+                            <i class="fab fa-google-plus-g"></i>
+                        </a>
                     </div>
                     <div class='ball'>
-                        <i class="fas fa-basketball-ball"></i>
+                        <a href="#">
+                            <i class="fas fa-basketball-ball"></i>
+                        </a>
                     </div>
                 </div>
             </div>
