--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
                         <span></span>
                     </div>
                     <div class="b-links">
-
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>  
                     </div>
                 </div>
             </nav>
@@ -42,6 +48,26 @@
                 <h2 class="title btb">Taste the Creativity</h2>
                 <p>We make awesome graphic and web design</p>
                 <p><span class="btn">Get Started</span></p>
+            </div>
+            <div class="modal-window">
+                <div class="modal-form">
+                    <p class="response-msg"></p>
+                    <form action="#">
+                        <label for="name">
+                            Name
+                        </label>
+                        <p>
+                            <input type="text" id="name" placeholder="Enter a name">
+                        </p>
+                        <label for="phone">
+                            Phone
+                        </label>
+                        <p>
+                            <input type="text" id="phone" placeholder="Enter a phone number">
+                        </p>
+                        <button type="button" id="btn-form">Push me</button>
+                    </form>
+                </div>
             </div>
         </div>
     </header>
